--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mon site</title>
+    <link rel="stylesheet" href="style.css" />
 </head>
 <body>
     <footer>
@@ -37,15 +38,12 @@
 
     <footer>
         <div class="contenu-footer">
-            <div class="bloc footer-services">
-                <h3>Nos reseaux </h3>
-                <ul class="liste services">
-                    <li><a href="#">Hebergement</a></li>
-                    <li><a href="#">Nom de domaine</a></li>
-                    <li><a href="#">E-commerce</a></li>
-                    <li><a href="#">Machine learning</a></li>
-                    <li><a href="#">Finance</a></li>
-                    <li><a href="#">Start-up</a></li>
+    <div class="bloc footer-reseaux">
+      <h3>Nos réseaux</h3>
+      <ul class="liste reseaux">
+        <li><a href="https://facebook.com/tonprofil" target="_blank"><i class="fab fa-facebook"></i> Facebook</a></li>
+        <li><a href="https://instagram.com/tonprofil" target="_blank"><i class="fab fa-instagram"></i> Instagram</a></li>
+        <li><a href="https://twitter.com/tonprofil" target="_blank"><i class="fab fa-twitter"></i>
 
                     
 
